--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     </head>
 
     <body>
-        <script type="module" src="js/index.js"></script>
+        <div id="dataviz"></div>
+        <script src="js/index.js"></script>
+        <script src="js/starPlot.js"></script>
+        <script src="js/myTeam.js"></script>
     </body>
 
 </html>
