--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
         <title>Data Viz</title>
         <script src="https://d3js.org/d3.v7.min.js"></script>
         <link rel="stylesheet" href="css/style.css">
+
     </head>
 
     <body>
         <div id="dataviz"></div>
-        <script src="js/index.js"></script>
+
         <script src="js/starPlot.js"></script>
         <script src="js/myTeam.js"></script>
+        <script type="module" src="js/index.js"></script>
     </body>
 
 </html>
