--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <body>
         <div id="dataviz"></div>
-
+        <div id="field"></div>
         <script src="js/starPlot.js"></script>
-        <script src="js/myTeam.js"></script>
+        <script src="js/soccerField.js"></script>
         <script type="module" src="js/index.js"></script>
     </body>
 
