added soccerField dots

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <body>
         <div id="dataviz"></div>
         <div id="field"></div>
-        <script src="js/starPlot.js"></script>
-        <script src="js/soccerField.js"></script>
+        <script type="module" src="js/starPlot.js"></script>
+        <script type="module" src="js/scatterPlot.js"></script>
+        <script type="module" src="js/soccerField.js"></script>
         <script type="module" src="js/index.js"></script>
     </body>
 
