Added first version of star plot

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div id="dataviz"></div>
+    <div id="starPlot"></div>
     <div id="myTeam">
         <div id="players">
             <h1>Lista Giocatori di Calcio</h1>
