added y-axis drop menu

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
                 <div class="flex-item">
                     <p>X-Axis</p>
                 </div>
+                <div class="flex-item"><select id="x-axis"></select></div>
                 <div class="flex-item">
-                    <select id="x-axis"></select>
+                    <p>Y-Axis</p>
                 </div>
+                <div class="flex-item"><select id="y-axis"></select></div>
             </div>
         </div>
         <div id="starPlot"></div>
