--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
         <div id="header">
             <h1>Football DataViz</h1>
         </div>
-        <div id="dataviz">
-            <div class="flex-container">
-                <div class="data-interaction">
-                    <div class="flex-item">
-                        <p>Pick the league</p>
+        <div class="choosing-players">
+            <div id="dataviz">
+                <div class="flex-container">
+                    <div class="data-interaction">
+                        <div class="flex-item">
+                            <p>Pick the league</p>
+                        </div>
+                        <div class="flex-item"><select id="pick-league"></select></div>
                     </div>
-                    <div class="flex-item"><select id="pick-league"></select></div>
+
+                    <div class="axis-interaction">
+                        <div class="flex-item">
+                            <p>X-Axis</p>
+                        </div>
+                        <div class="flex-item"><select id="x-axis"></select></div>
+
+                        <div class="flex-item">
+                            <p>Y-Axis</p>
+                        </div>
+                        <div class="flex-item"><select id="y-axis"></select></div>
+                    </div>
                 </div>
-
-                <div class="axis-interaction">
-                    <div class="flex-item">
-                        <p>X-Axis</p>
-                    </div>
-                    <div class="flex-item"><select id="x-axis"></select></div>
-
-                    <div class="flex-item">
-                        <p>Y-Axis</p>
-                    </div>
-                    <div class="flex-item"><select id="y-axis"></select></div>
-                </div>
-
-
-
             </div>
+            <div id="starPlot"></div>
         </div>
-        <div id="starPlot"></div>
+
         <div id="myTeam">
             <div id="players">
                 <h1>Lista Giocatori di Calcio</h1>
