--- a/index.html
+++ b/index.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Viz</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <link href="https://fonts.cdnfonts.com/css/nexa-bold" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Data Viz</title>
+        <script src="https://d3js.org/d3.v7.min.js"></script>
+        <link href="https://fonts.cdnfonts.com/css/nexa-bold" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 
-<body>
-    <div id="header">
-        <h1 style="font-weight: bold;">Football DataViz</h1>
-    </div>
-    <div class="choosing-players">
-        <div id="dataviz">
-            <div class="flex-container">
-                <div class="data-interaction">
-                    <div class="flex-item">
-                        <p>Pick the league</p>
+    <body>
+        <div id="header">
+            <h1 style="font-weight: bold;">Football DataViz</h1>
+        </div>
+        <div id="choosing-players">
+            <div id="scatter-plot">
+                <div class="flex-container">
+                    <div class="data-interaction">
+                        <div class="flex-item">
+                            <p>Pick the league</p>
+                        </div>
+                        <div class="flex-item"><select class="form-select-sm" id="pick-league"></select></div>
                     </div>
-                    <div class="flex-item"><select class="form-select-sm" id="pick-league"></select></div>
-                </div>
 
-                <div class="axis-interaction">
-                    <div class="flex-item">
-                        <p>X-Axis</p>
-                    </div>
-                    <div class="flex-item"><select class="form-select-sm" id="x-axis"></select></div>
+                    <div class="axis-interaction">
+                        <div class="flex-item">
+                            <p>X-Axis</p>
+                        </div>
+                        <div class="flex-item"><select class="form-select-sm" id="x-axis"></select></div>
 
-                    <div class="flex-item">
-                        <p>Y-Axis</p>
+                        <div class="flex-item">
+                            <p>Y-Axis</p>
+                        </div>
+                        <div class="flex-item"><select class="form-select-sm" id="y-axis"></select></div>
                     </div>
-                    <div class="flex-item"><select class="form-select-sm" id="y-axis"></select></div>
                 </div>
             </div>
+            <div id="player-analysis">
+                <div id="player-vis">
+
+                </div>
+                <div id="barPlot"></div>
+            </div>
+
         </div>
-        <div id="barPlot"></div>
-    </div>
+        </div>
 
-
-    </div>
-
-    <script type="module" src="js/starPlot.js"></script>
-    <script type="module" src="js/scatterPlot.js"></script>
-    <script type="module" src="js/myTeam.js"></script>
-    <script type="module" src="js/index.js"></script>
-</body>
+        <script type="module" src="js/starPlot.js"></script>
+        <script type="module" src="js/scatterPlot.js"></script>
+        <script type="module" src="js/myTeam.js"></script>
+        <script type="module" src="js/index.js"></script>
+    </body>
 
 </html>
