added barPlot button interaction

--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
                             <div id="player-vis">
 
                             </div>
-                            <div id="barPlot"></div>
+                            <div id="barPlot">
+                                <div class="bar-plot-title"></div>
+                                <div class="bar-plot-interactions"><button id="showGoals">Goals</button>
+                                    <button id="showAssists">Assists</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
