from select interation competition to checkboxes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="flex-item">
                         <p>Pick the league</p>
                     </div>
-                    <div class="flex-item"><select id="pick-league"></select>
+                    <div id="dropMenuLeague"></select>
                     </div>
                 </div>
             </div>
