checkbox menu updated

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <h1>Football data visualization tool with d3.js</h1>
                 </div>
                 <div class="data-interaction">
-                    <div class="flex-item">
-                        <p>Pick the league</p>
+                    <div class="interaction-title">
+                        <h2>Pick The League</h2>
                     </div>
                     <div id="dropMenuLeague"></select>
                     </div>
