--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <div id="header">
                     <div class="sidebar-toggle">
                         <button>
-                            <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/menu--v3.png"
-                                alt="menu--v3" />
+                            <img width="40" height="40" src="https://img.icons8.com/material-outlined/384/menu--v1.png"
+                                alt="menu--v1" />
                         </button>
                     </div>
                     <h1 style=" font-weight: bold;">Football DataViz</h1>
@@ -37,7 +37,10 @@
                 <div class="content">
                     <div id="choosing-players">
                         <div id="scatter-plot">
-                            <div class="flex-container">
+                            <div class="scatter-plot-interaction">
+                                <!-- <div class="search-bar">
+                                    <input type="text" id="search-bar" placeholder="Search for a player">
+                                </div> -->
                                 <div class="axis-interaction">
                                     <div class="flex-item">
                                         <p>X-Axis</p>
