--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                     </div>
                     <div id="dropMenuLeague"></select>
                     </div>
+                    <div class="interaction-title">
+                        <h2>And pick a player position</h2>
+                    </div>
+                    <div><select id="pick-position"></select></div>
                 </div>
             </div>
             <div class="no-sidebar">
