updated barPlot interaction

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
                     <div id="player-analysis">
                         <div id="barPlot">
                             <div class="bar-plot-title"></div>
-                            <div class="bar-plot-interactions"><button id="showGoals">Goals</button>
-                                <button id="showAssists">Assists</button>
+                            <div class="bar-plot-interactions">
+                                <button id="showFeature1"></button>
+                                <button id="showFeature2"></button>
                             </div>
                         </div>
                     </div>
