sidebar style modified

--- a/index.html
+++ b/index.html
@@ -17,14 +17,9 @@
                     <h1>Football data visualization tool with d3.js</h1>
                 </div>
                 <div class="data-interaction">
-                    <div class="interaction-title">
-                        <h2>Pick The League</h2>
-                    </div>
-                    <div id="dropMenuLeague"></select>
-                    </div>
-                    <div class="interaction-title">
-                        <h2>And pick a player position</h2>
-                    </div>
+                    <div id="showDropMenuLeague"></div>
+                    <div id="dropMenuLeague"></div>
+                    <div id="showPickPosition"></div>
                     <div><select id="pick-position"></select></div>
                 </div>
             </div>
