added bedge competitions to the scatterPlot

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <div id="choosing-players">
                         <div id="scatter-plot">
                             <div class="scatter-plot-interaction">
+                                <div id="badge-container-scatter"></div>
                                 <!-- <div class="search-bar">
                                     <input type="text" id="search-bar" placeholder="Search for a player">
                                 </div> -->
