added description to the scatterPlot

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
                     <div id="showPickPosition"></div>
                     <div><select id="pick-position"></select></div>
                 </div>
+                <div class="dev-team">
+                    <p>
+                        Developed by: <a href="https://github.com/Francesco9932">Francesco Stefanelli</a> and <a
+                            href="https://github.com/georgelzrc">George Lazarica</a>
+                    </p>
+                </div>
             </div>
             <div class="no-sidebar">
                 <div id="header">
@@ -51,7 +57,15 @@
                                         <p>Y-Axis</p>
                                     </div>
                                     <div class="flex-item"><select id="y-axis"></select></div>
+                                    <div class="explain-plot">
+                                        <div>
+                                            <p>All statistics in the Scatter Plot are relative to a SINGLE match.
+                                                And only players who played more than 5 matches are shown.
+                                            </p>
+                                        </div>
+                                    </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
